src/main/webapp/assets/css/style.css
header {
    background: #62B3E5;
    padding: 69px;
    font-size: 26px;
    font-weight: bold;
    color: #ffffff;
    text-align: center;
    margin-bottom: 20px;
}

#logo-image {
	position: absolute;
	top: 0px;
	left: 0px;
}

/*  154, 202, 235 */

header > span {
	display: block;
}

body {
	color: #333;
}

.header-low {
	font-size: 16px;
}
.points-form-input  {
	text-align: left;
	color: #000;
}

.points-form-input label {
	text-align: left;
	color: #000 !important;
}

.points-form-submit {
	text-align: right;
	margin: 10px;
}
.points-form-main {
	width: 100%;
	text-align: center;
}

.points-form-container {
	width: 57%;
	margin-right: auto;
	margin-left: auto;
	text-align: center;
}

#comment {
	resize: none;
}

#comment-label {
	vertical-align: top;
}

.error {
	color: red;
	text-align: right;
	font-size: 12px;
	margin-top: 0px;
	margin-bottom: 0px;
	padding-top: 0px;
}

md-input-container {
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    position: relative;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    padding: 2px 2px 5px;
}

.success-block {
	color: green;
	text-align: right;
}

.error-block {
	color: red;
	text-align: right;
}

.main-container {
	vertical-align: top;
    text-align: center;
    margin: 0px auto;
    width: 100%;
}

.main-container-left {
	vertical-align: top;
	display: inline-block;
    margin: 0px auto;
    width: 66%;
}

.main-container-right {
	vertical-align: top;
	display: inline-block;
    margin: 0px auto;
    width: 32%;
}

/* -----LEADERBOARD----- */

#leaderboard-table {

	margin: auto;
	width: 70%;
}

#leaderboard-table thead {
	color: #7b7b7b;
}

#leaderboard-table, td {
	padding-bottom: 7px;
	padding-top: 7px;
	border-collapse: collapse;
	border-bottom: solid 1px #d2d2d2;
	text-align: left;
}

.reload-leaders-button {
	padding-bottom: 12px;
	padding-top: 12px;
}



/* -----LEADERBOARD----- */
/* -----FOOTER----- */

footer {
    background: palevioletred;
    padding: 20px;
    margin-top: 20px;
}

#registration-form {
	display: none;
} 

button.md-default-theme.md-primary.md-raised, .md-button.md-default-theme.md-primary.md-fab {
    color: rgba(255,255,255,0.87);
    background-color: #9acaeb !important;
}

button.md-default-theme.md-raised[disabled], .md-button.md-default-theme.md-fab[disabled] {
    background-color: rgba(0,0,0,0.12) !important;
}

/* md-input-container.md-default-theme.md-input-invalid .md-input { */
/*     border-color: rgba(0,0,0, 0.12); */
/* } */

